--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <title>Mathematics Quiz Game</title>
-	<link rel="stylesheet" type="text/css" href="./css/custom.css">
-	<link rel="stylesheet" href="./css/bootstrap.min.css">
-	<script src="./js/jquery-3.5.1.slim.min.js"></script>
-	<script src="./js/bootstrap.bundle.min.js"></script>
-	<script src="./js/custom.js"></script>
+	<link rel="stylesheet" type="text/css" href="custom.css">
+	<link rel="stylesheet" href="bootstrap.min.css">
+	<script src="jquery-3.5.1.slim.min.js"></script>
+	<script src="bootstrap.bundle.min.js"></script>
+	<script src="custom.js"></script>
 </head>
 
 <body>
